[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
actix-web = "4.3.1"
awc = "3.5.1"
shuttle-actix-web = "0.49.0"
shuttle-runtime = "0.49.0"
tokio = "1.26.0"
toml = "0.8.19"
azure_identity = "0.21.0"
azure_app_config = "0.1.1"
futures-util = "0.3.31"
async-compression = { version = "0.4.18", features = ["tokio", "gzip"] }
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
tokio-util = { version = "0.7.13", features = ["io"] }
serde_json = "1.0.134"
tracing = "0.1.41"
